# multi_robots_pkg

capella_multi_robots_info/: package.xml  setup.cfg  setup.py
capella_multi_robots_info/capella_multi_robots_info/: multi_robots_info_pub.py  multi_robots_info_sub.py
multi_robots/: CMakeLists.txt  package.xml
multi_robots/include/nav2_multi_robots_avoidance/: multi_robots_avoidance_action.hpp
multi_robots/launch/: multi_robots_avoidance.launch.py
multi_robots/param/: config.yaml
multi_robots/src/: multi_robots_avoidance_action.cpp
random_target_publisher/: CMakeLists.txt  package.xml
random_target_publisher/src/: random_target_publisher_node.cpp
